fixed yt iframe overflow

--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ body {
 
 header {
 	position: relative;
-	padding-bottom: 7rem;
+	padding-bottom: 6rem;
 	background: var(--image);
 	background-position: center;
 	background-size: cover;
@@ -116,7 +116,7 @@ nav a:hover {
 }
 
 .intro h1, .intro h2, .intro h3 {
-	font-size: 2rem;
+	font-size: 2.5rem;
 }
 
 .intro p {
@@ -147,7 +147,7 @@ nav a:hover {
 	width: 80%;
 }
 
-.stuff {
+/*.stuff {
 	background: var(--accent-image);
 	opacity: 0.8;
 }
@@ -161,7 +161,7 @@ nav a:hover {
 	border-radius: var(--border-radius);
 	margin: 1rem;
 	color: var(--color-wtb);
-}
+}*/
 
 /*
 	=======
@@ -192,6 +192,23 @@ p, ul {
 	font-size: 1.25rem;
 }
 
+.videoWrapper {
+	position: relative;
+	padding-bottom: 56.25%;
+	padding-top: 25px;
+	height: 0;
+	margin: 0 auto;
+}
+
+.videoWrapper iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 65%;
+	height: 65%;
+	margin: 0 auto;
+}
+
 /*-moz-osx-font-smoothing: grayscale;
 -webkit-font-smoothing: antialiased;*/
 
@@ -202,13 +219,13 @@ p, ul {
 */
 
 @media (max-width: 23em) {
-	nav a {
+/*	nav a {
 		font-size: 1.05rem;
 		padding: 0.5rem;
-	}
+	}*/
 
 	.posts img {
-		max-width: calc(90vw - 10%);
+		max-width: calc(95vw - 10%);
 	}
 }
 
@@ -219,5 +236,24 @@ p, ul {
 
 	.post-content img {
 		width: 100%;
+	}
+
+	.intro h1,
+	.intro h2,
+	.intro h3 {
+		font-size: 2rem;
+	}
+
+	.intro p {
+		font-size: 1.4rem;
+	}
+
+	.intro .note {
+		font-size: 1rem;
+	}
+
+	.videoWrapper iframe {
+		width: 100%;
+		height: 100%;
 	}
 }
